[package]
name = "restic_ez"
version = "0.1.4"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "This crate provides a simple configuration loader and API around `restic`"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ResticEz-rust"
readme = "README.md"


[[bin]]
name = "restic-ez"
path = "src/main.rs"


[badges]
travis-ci = { repository = "KizzyCode/ResticEz-rust" }
appveyor = { repository = "KizzyCode/ResticEz-rust" }


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
ebacktrace = "0.3"


[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true