[package]
name = "restic_ez"
edition = "2024"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "This crate provides a simple configuration loader and API around `restic`"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ResticEz-rust"
readme = "README.md"

# Note: If you adjust this, also update:
#  - HELP.txt
#  - README.md#man-page
version = "0.5.0"


[[bin]]
name = "restic-ez"
path = "src/main.rs"


[badges]
travis-ci = { repository = "KizzyCode/ResticEz-rust" }
appveyor = { repository = "KizzyCode/ResticEz-rust" }


[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde", "std"] }

[dev-dependencies]


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
